--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     display: flex;
     align-items: flex-end;
   }
+
+  .display-none {
+    display: none;
+  }
+
+  .display {
+    display: block;
+  }
 </style>
 
 <body>
