--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <title>MapEditor</title>
   <script src="dist/app.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 </head>
 
 <style>
@@ -24,11 +32,61 @@
   .display {
     display: block;
   }
+
+  /* button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    height: 32px;
+    width: 100px;
+    transition: 0.3s;
+    font-size: 17px;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+  }
+
+  button:hover {
+    background-color: #eeee;
+  }
+
+  button.active {
+    background-color: #ccc;
+  } */
+
+  #tabs {
+    padding: 6px 12px;
+    border-bottom: 1px solid #ccc;
+    border-top: none;
+    width: 100%;
+    height: 30px;
+  }
 </style>
 
 <body>
-  <div id="tabs" class="flex-row flex-end" style="height: 75px; width: 100%;" onclick="addTab()"></div>
-  <div id="game"></div>
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input id="modal-input"></input>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Understood</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="tabs" class="flex-row flex-end"></div>
+  <div id="contexts">
+    <div id="context-0" class="display"></div>
+  </div>
 </body>
 
 </html>
